# rai-code

./: AGENTS.md  BUILD.md  Cargo.toml  LICENSE  README.md  TASKS.md
crates/rai-browser/: Cargo.toml
crates/rai-browser/src/: cdp.rs  lib.rs  pane.rs  tools.rs
crates/rai-cli/: Cargo.toml
crates/rai-cli/src/: lib.rs  main.rs
crates/rai-cli/tests/: docs_branding.rs  poc_e2e.rs  torture_tests.rs
crates/rai-codegen/: Cargo.toml
crates/rai-codegen/src/: dcg.rs  highlight.rs  lib.rs  lsp.rs
crates/rai-core/: Cargo.toml
crates/rai-core/src/: compact.rs  diff_gate.rs  escalation.rs  harness.rs  harness_evolution.rs  hook.rs  itvf.rs  lib.rs  loop_.rs  perm.rs  state.rs  subagent.rs  test_hack_detector.rs  tool.rs  workflow.rs
crates/rai-daemon/: Cargo.toml
crates/rai-daemon/src/: main.rs
crates/rai-llm/: Cargo.toml
crates/rai-llm/src/: client.rs  lib.rs  mock.rs  provider.rs
crates/rai-mcp/: Cargo.toml
crates/rai-mcp/src/: client.rs  lib.rs  server.rs  tool_tax.rs  toolsearch.rs
crates/rai-python/: Cargo.toml
crates/rai-python/src/: graphiti.rs  hindsight.rs  lib.rs  store.rs
crates/rai-sandbox/: Cargo.toml
crates/rai-sandbox/src/: lib.rs  sandbox.rs
crates/rai-security/: Cargo.toml
crates/rai-security/src/: flight.rs  kernel.rs  lib.rs  provenance.rs
crates/rai-tui/: Cargo.toml
crates/rai-tui/src/: app.rs  lib.rs  palette.rs
crates/rai-tui/src/panes/: browser.rs  chat.rs  diff.rs  file_tree.rs  mod.rs  plan.rs
docs/: ITVF-LOOP.md  RESEARCH-ALIGNMENT.md  UX-DESIGN.md
docs/architecture/: CLEAN-ROOM-METHODOLOGY.md  README.md
scripts/: requirements.txt  sidecar.py
