[workspace]
resolver = "2"
members = [
    "crates/rai-core",
    "crates/rai-tui",
    "crates/rai-llm",
    "crates/rai-mcp",
    "crates/rai-sandbox",
    "crates/rai-browser",
    "crates/rai-security",
    "crates/rai-codegen",
    "crates/rai-python",
    "crates/rai-daemon",
    "crates/rai-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["RAI Code Contributors"]
repository = "https://github.com/rai-code/rai-code"
description = "RAI Code — a Rust TUI agentic software engineering harness that knows you and your codebase."

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-image = { version = "10", default-features = false }

# Python FFI (used by rai-python behind the pyo3-embed feature; declared here non-optional
# because workspace deps can't be optional — the crate marks it optional on its side)
pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# MCP (official Rust SDK)
rmcp = "0.16"

# LLM (multi-provider)
genai = "0.6"

# HTTP / SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git (worktree isolation for sub-agents)
git2 = "0.19"

# Browser (CDP)
chromiumoxide = { version = "0.6", default-features = false, features = ["tokio-runtime"] }

# Code intelligence
tree-sitter = "0.25"
# tree-house = "25.07"  # Helix highlighter; pin when stable
async-lsp = "0.2"

# Dynamic workflows (sandboxed JS via V8)
rustyscript = "0.6"

# Images
image = "0.25"

# Misc
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
