[package]
name = "rai-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bridge to Graphiti + Hindsight. Phase 1: Python sidecar (JSON-RPC over stdin/stdout) — simple, crash-isolated. Phase 2: PyO3 in-process (opt-in feature)."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }

[features]
default = []
sidecar = []
pyo3-embed = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
