[package]
name = "rai-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution-layer security kernel (AgentK pattern, native Rust): typed syscalls + taint labels, default-deny unknown, Ed25519 capability receipts, opaque secret FD handles, hash-chained flight recorder, MCP proxy mediation."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
